--- a/_output.yml
+++ b/_output.yml
@@ -9,12 +9,10 @@ bookdown::gitbook:
       collapse: section
       scroll_highlight: yes
       before: |
-        <li><a href="./">Oski Bear</a></li>
+        <li><a href="./">Tom Hunter<i class="fa fa-thumbs-up" style="font-size:36px;color:blue"></i> </a></li>
       after: |
-        <li><a href="https://github.com/oskibear" target="blank">GitHub</a></li>
-        <li><a href="https://www.ischool.berkeley.edu/people/oski-bear" target="blank">UC Berkeley</a></li>
-        <li><a href="https://www.linkedin.com/in/oskibear/" target="blank">LinkedIn</a></li>
-        <li><a href="https://www.wired.com/2013/02/friendster-autopsy/" target="blank">Friendster</a></li>        
+        <li><a href="https://github.com/TomHunter1" target="blank">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/thomas-hunter-5623b91b/" target="blank">LinkedIn</a></li>        
     sharing:
       facebook: no
       twitter: no
