--- a/_output.yml
+++ b/_output.yml
@@ -9,7 +9,7 @@ bookdown::gitbook:
       collapse: section
       scroll_highlight: yes
       before: |
-        <li><a href="./">Tom Hunter<i class="fa fa-thumbs-up" style="font-size:36px;color:blue"></i> </a></li>
+        <li><a href="./">Tom Hunter<i class="fa fa-thumbs-up" style="font-size:36px;color:#66ccff"></i> </a></li>
       after: |
         <li><a href="https://github.com/TomHunter1" target="blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/thomas-hunter-5623b91b/" target="blank">LinkedIn</a></li>        
